# Dup-Resist

./: .gitignore  README.md  pyproject.toml
dup_resist/: __init__.py  data_models.py  gene_conversion.py  mcscanx_parser.py  singletonfx.py
scripts/: detect_gene_conversion.py  merge_gene_conversion_results.py  plot_gene_conversion.py  singletonfx.py
